// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/SidebarPanels render should render activity sidebar 1`] = `
<Switch>
  <Route
    render={[Function]}
  />
</Switch>
`;

exports[`elements/content-sidebar/SidebarPanels render should render details sidebar 1`] = `
<Switch>
  <Route
    exact={true}
    path="/details"
    render={[Function]}
  />
  <Route
    render={[Function]}
  />
</Switch>
`;

exports[`elements/content-sidebar/SidebarPanels render should render metadata sidebar 1`] = `
<Switch>
  <Route
    exact={true}
    path="/metadata"
    render={[Function]}
  />
  <Route
    render={[Function]}
  />
</Switch>
`;

exports[`elements/content-sidebar/SidebarPanels render should render no sidebar 1`] = `
<Switch>
  <Route
    render={[Function]}
  />
</Switch>
`;

exports[`elements/content-sidebar/SidebarPanels render should render skills sidebar 1`] = `
<Switch>
  <Route
    exact={true}
    path="/skills"
    render={[Function]}
  />
  <Route
    render={[Function]}
  />
</Switch>
`;
